syntax = "proto3";

package api.contentmoderation.v1;

option go_package = "github.com/wyfcoding/ecommerce/goapi/contentmoderation/v1;contentmoderationv1";

// 内容安全审核服务，负责对用户提交的文本及图片进行合规性检测（如色情、暴恐、广告检测）。
service ContentModerationService {
  // 对纯文本或富文本进行安全扫描。
  rpc ModerateText(ModerateTextRequest) returns (ModerateTextResponse);

  // 对图片二进制或链接进行内容风险检测。
  rpc ModerateImage(ModerateImageRequest) returns (ModerateImageResponse);
}

// 文本审核请求。
message ModerateTextRequest {
  // 待审内容。
  string text = 1;
  // 内容所属场景（如评论、昵称）。
  string content_type = 2;
  // 发起审核的用户 ID。
  uint64 user_id = 3;
}

// 文本审核响应。
message ModerateTextResponse {
  // 是否内容合规安全。
  bool is_safe = 1;
  // 命中的风险标签列表。
  repeated string moderation_labels = 2;
  // 拒绝详细理由描述。
  optional string rejection_reason = 3;
}

// 图片审核请求。
message ModerateImageRequest {
  // 原始字节数据。
  bytes image_data = 1;
  // 场景分类。
  string content_type = 2;
  // 发起人 ID。
  uint64 user_id = 3;
}

// 图片审核响应。
message ModerateImageResponse {
  // 是否合规。
  bool is_safe = 1;
  // 命中的风险分类。
  repeated string moderation_labels = 2;
  // 拒绝说明。
  optional string rejection_reason = 3;
}
